--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -20,7 +20,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 	
 	<h:head>
-		<title>Java EE Demo</title>
+		<title>Messaging</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<h:outputStylesheet name="css/screen.css" />
 	</h:head>
