--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -120,15 +120,15 @@ h3 {
 }
 
 h4 {
-	
+
 }
 
 h5 {
-	
+
 }
 
 h6 {
-	
+
 }
 /* Member registration styles */
 span.invalid {
@@ -136,7 +136,7 @@ span.invalid {
 	color: red;
 }
 
-form {
+form#userRegForm {
 	padding: 1em;
 	width: 100%;
 	border: 1px solid #D5D5D5;
@@ -144,7 +144,7 @@ form {
 
 label {
 	float: left;
-	width: 15%;
+	width: 25%;
 	margin-left: 20px;
 	margin-right: 0.5em;
 	padding-top: 0.2em;
