--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -239,3 +239,54 @@ input {
 	color: #3883ce;
 	text-decoration: none;
 }
+
+/* --- Messages ------------------------------------------------------------- */
+
+.message {
+    margin: 15px 0px;
+}
+
+.message-sender {
+    color: #3b59ba;
+    float: left;
+}
+
+.message-date {
+    float: right;
+    font-size: 13px;
+    color: #bdc1c9;
+}
+
+.message-content {
+    clear: both;
+}
+
+.new-message-text {
+    background: #ffffff;
+    border: 1px solid #bdc1c9;
+    color: #000000;
+    padding: 5px;
+    width: 100%;
+    display: block;
+    height: 50px;
+    margin: 30px 0px 10px 0px;
+    resize: vertical;
+    box-sizing: border-box;
+}
+
+.submit-button {
+    background: #ffffff;
+    color: #000000;
+    border: 1px solid #bdc1c9;
+    padding: 3px 7px;
+}
+
+.submit-button:hover, .submit-button:active {
+    border: 1px solid #c86464;
+    color: #9b2f2f;
+    cursor: pointer;
+}
+
+.right {
+    float: right;
+}
