reorganization of full project

--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -20,19 +20,16 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 	
 	<h:head>
-		<title>Messaging</title>
+		<title>Üzenetküldő</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<h:outputStylesheet name="css/screen.css" />
 	</h:head>
 	
 	<h:body>
 		<div id="container">
-			<div id="content">
-				<ui:insert name="content">
-					[Template content will be inserted here]
-				</ui:insert>
-			</div>
-			<div id="footer"></div>
+			<ui:insert name="container">
+			    [Template content will be inserted here]
+			</ui:insert>
 		</div>
 	</h:body>
 	
