--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -27,23 +27,10 @@ body {
 #container {
 	margin: 0 auto;
 	padding: 0 20px 10px 20px;
-	border-top: 5px solid #000000;
-	border-left: 5px solid #8c8f91;
-	border-right: 5px solid #8c8f91;
-	border-bottom: 25px solid #8c8f91;
-	width: 865px; /* subtract 40px from banner width for padding */
+	border: 1px solid #000000;
+	width: 865px;
 	background: #FFFFFF;
-	background-image:
-		url(#{request.contextPath}/resources/gfx/headerbkg.png);
-	background-repeat: repeat-x;
-	padding-top: 30px;
 	box-shadow: 3px 3px 15px #d5d5d5;
-}
-
-#content {
-	float: left;
-	width: 800px;
-	margin: 20px;
 }
 
 #menu {
@@ -56,7 +43,11 @@ body {
 	clear: both;
 }
 
-#mainContent {
+#contentFull {
+
+}
+
+#content {
 	float: right;
 	border: 1px solid #cccccc;
 	width: 555px;
