design + error checking at reg and profile edit

--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -27,9 +27,13 @@
 	
 	<h:body>
 		<div id="container">
+			<div id="title">
+	            <h1>Üzenetküldő</h1>
+	        </div>
 			<ui:insert name="container">
 			    [Template content will be inserted here]
 			</ui:insert>
+			<div id="footer">PROGRAMRENDSZEREK FEJLESZTÉSE KÖTELEZŐ PROGRAM 2016. ERDŐSI DOROTTYA, HAVAS DÁVID, NAGY TAMÁS</div>
 		</div>
 	</h:body>
 	
