--- a/src/main/webapp/templates/logged-in-default.xhtml
+++ b/src/main/webapp/templates/logged-in-default.xhtml
@@ -9,7 +9,7 @@
     
         <h:panelGroup layout="block" rendered="#{indexController.loggedIn()}">
     
-	        <div id="menu">
+	        <div id="menu" class="box">
 	            <ul>
 	               <li>
                        <h:link value="Kezdőlap" outcome="/content/home.xhtml" />
@@ -33,7 +33,7 @@
 	            </ul>
 	        </div>
 	        
-	        <div id="content">
+	        <div id="content" class="box">
 				<ui:insert name="content">
 	                [Template content will be inserted here]
 				</ui:insert>
@@ -44,7 +44,7 @@
         </h:panelGroup>
         
         <h:panelGroup layout="block" rendered="#{not indexController.loggedIn()}">
-            Nem vagy bejelentkezve!
+            <div id="contentFull" class="box">Nem vagy bejelentkezve!</div>
         </h:panelGroup>
         
     </ui:define>
