--- a/src/main/webapp/resources/css/screen.css
+++ b/src/main/webapp/resources/css/screen.css
@@ -1,237 +1,144 @@
-/*
- * JBoss, Home of Professional Open Source
- * Copyright 2013, Red Hat, Inc. and/or its affiliates, and individual
- * contributors by the @authors tag. See the copyright.txt in the
- * distribution for a full listing of individual contributors.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- * http://www.apache.org/licenses/LICENSE-2.0
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-/* Core styles for the page */
 body {
-	margin: 0;
-	padding: 0;
-	background-color: #F1F1F1;
-	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-	font-size: 0.8em;
-	color: #363636;
+    margin: 0;
+    padding: 0;
+    background-color: #F1F1F1;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font-size: 0.8em;
+    color: #363636;
 }
 
 #container {
-	margin: 0 auto;
-	padding: 0 20px 10px 20px;
-	border: 1px solid #000000;
-	width: 865px;
-	background: #FFFFFF;
-	box-shadow: 3px 3px 15px #d5d5d5;
+    margin: 30px auto;
+    width: 865px;
+}
+
+#title {
+    text-align: center;
+}
+
+.subtitle {
+    font-weight: bold;
+    font-size: 1.25em;
+    display: block;
+}
+
+.only-top-margin {
+	margin: 15px 0px 0px 0px;
 }
 
 #menu {
-	float: left;
-	width: 200px;
-	border: 1px solid #cccccc;
+    float: left;
+    width: 200px;
 }
 
 .clear {
-	clear: both;
+    clear: both;
 }
 
-#contentFull {
-
-}
-
-#content {
-	float: right;
-	border: 1px solid #cccccc;
-	width: 555px;
-	padding: 10px;
-}
-
-#aside {
-	font-size: 0.9em;
-	width: 275px;
-	float: left;
-	margin: 20px 0px;
-	border: 1px solid #D5D5D5;
-	background: #F1F1F1;
-	background-image: url(#{request.contextPath}/resources/gfx/asidebkg.png);
-	background-repeat: repeat-x;
-	padding: 20px;
-}
-
-#aside ul {
-	padding-left: 30px;
-}
-
-.dualbrand {
-	float: right;
-	padding-right: 10px;
+.box {
+    background: #ffffff;
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid;
+    border-color: #e5e6e9 #dfe0e4 #d0d1d5;
 }
 
 #footer {
-	clear: both;
-	text-align: center;
-	color: #666666;
-	font-size: 0.85em;
+	text-align: right;
+	margin: 15px 0px 0px 0px;
+	border-top: 1px solid #d0d1d5;
+	color: #d0d1d5;
+	font-size: 0.75em;
 }
 
-code {
-	font-size: 1.1em;
+#contentFull {
+    width: 300px;
+    margin: 25px auto 0px auto;
+}
+
+#content {
+    float: right;
+    width: 605px;
 }
 
 a {
-	color: #4a5d75;
-	text-decoration: none;
-	margin-right: 5px;
+    color: #4a5d75;
+    text-decoration: none;
 }
 
 a:hover {
-	color: #369;
-	text-decoration: underline;
+    color: #369;
+    text-decoration: underline;
 }
 
 h1 {
-	color: #243446;
-	font-size: 2.25em;
+    color: #243446;
+    font-size: 2.25em;
 }
 
-h2 {
-	font-size: 1em;
-}
-
-h3 {
-	color: #243446;
-}
-
-h4 {
-
-}
-
-h5 {
-
-}
-
-h6 {
-
-}
-/* Member registration styles */
-span.invalid {
-	padding-left: 3px;
-	color: red;
-}
-
-form#userRegForm {
-	padding: 1em;
-	width: 100%;
-	border: 1px solid #D5D5D5;
-}
-
-label {
-	float: left;
-	width: 25%;
-	margin-left: 20px;
-	margin-right: 0.5em;
-	padding-top: 0.2em;
-	text-align: right;
-	font-weight: bold;
-	color: #363636;
-}
-
-input {
-	margin-bottom: 8px;
-}
-
-.register {
-	float: left;
-	margin-left: 85px;
-}
-
-/*  -----  table style  -------  */
-
-/*  = Simple Table style (black header, grey/white stripes  */
 .simpletablestyle {
-	background-color: #E6E7E8;
-	clear: both;
-	width: 100%;
-	margin-bottom: 20px;
+    background-color: #E6E7E8;
+    clear: both;
+    width: 100%;
+    margin-top: 15px;
 }
 
 .simpletablestyle img {
-	border: 0px;
+    border: 0px;
 }
 
 .simpletablestyle td {
-	height: 2em;
-	padding-left: 6px;
-	font-size: 11px;
-	padding: 5px 5px;
+    height: 2em;
+    padding-left: 6px;
+    font-size: 11px;
+    padding: 5px 5px;
 }
 
 .simpletablestyle th {
-	background: url(#{request.contextPath}/resources/gfx/bkg-blkheader.png)
-		black repeat-x top left;
-	font-size: 12px;
-	font-weight: normal;
-	padding: 0 10px 0 5px;
-	border-bottom: #999999 dotted 1px;
-}
-
-.simpletablestyle thead {
-	background: url(#{request.contextPath}/resources/gfx/bkg-blkheader.png)
-		black repeat-x top left;
-	height: 31px;
-	font-size: 10px;
-	font-weight: bold;
-	color: #FFFFFF;
-	text-align: left;
+    background: url(#{request.contextPath}/resources/gfx/bkg-blkheader.png)
+        black repeat-x top left;
+    font-size: 12px;
+    font-weight: normal;
+    padding: 0 10px 0 5px;
+    border-bottom: #999999 dotted 1px;
 }
 
 .simpletablestyle .header a {
-	color: #94aebd;
+    color: #94aebd;
 }
 
 .simpletablestype tfoot {
-	height: 20px;
-	font-size: 10px;
-	font-weight: bold;
-	background-color: #EAECEE;
-	text-align: center;
+    height: 20px;
+    font-size: 10px;
+    font-weight: bold;
+    background-color: #EAECEE;
+    text-align: center;
 }
 
 .simpletablestyle tr.header td {
-	padding: 0px 10px 0px 5px;
+    padding: 0px 10px 0px 5px;
 }
 
 .simpletablestyle .subheader {
-	background-color: #e6e7e8;
-	font-size: 10px;
-	font-weight: bold;
-	color: #000000;
-	text-align: left;
+    background-color: #e6e7e8;
+    font-size: 10px;
+    font-weight: bold;
+    color: #000000;
+    text-align: left;
 }
 
-/* Using new CSS3 selectors for styling*/
 .simpletablestyle tr:nth-child(odd) {
-	background: #f4f3f3;
+    background: #f4f3f3;
 }
 
 .simpletablestyle tr:nth-child(even) {
-	background: #ffffff;
+    background: #ffffff;
 }
 
 .simpletablestyle td a:hover {
-	color: #3883ce;
-	text-decoration: none;
+    color: #3883ce;
+    text-decoration: none;
 }
-
-/* --- Messages ------------------------------------------------------------- */
 
 .message {
     margin: 15px 0px;
@@ -263,6 +170,7 @@ input {
     margin: 30px 0px 10px 0px;
     resize: vertical;
     box-sizing: border-box;
+    min-height: 30px;
 }
 
 .submit-button {
@@ -276,6 +184,52 @@ input {
     border: 1px solid #c86464;
     color: #9b2f2f;
     cursor: pointer;
+}
+
+.reg-button {
+    margin-left: 10px;
+}
+
+.td-center {
+    text-align: center;
+}
+
+.td-left {
+	text-align: left;
+}
+
+.td-right {
+	text-align: right;
+}
+
+.td-error {
+    color: #9b2f2f;
+}
+
+.user-edit-table {
+    width: 100%;
+}
+
+.user-edit-table-margin {
+	margin-top: 15px;
+}
+
+.user-edit-table td {
+    padding: 3px;
+}
+
+.user-edit-td-titles {
+	width: 85px;
+}
+
+.user-edit-text {
+	width: 150px;
+	border: 1px solid #bdc1c9;
+	background: #ffffff;
+}
+
+.user-edit-text:focus {
+	border: 1px solid #c86464;
 }
 
 .right {
