--- a/src/main/webapp/templates/logged-out-default.xhtml
+++ b/src/main/webapp/templates/logged-out-default.xhtml
@@ -9,7 +9,7 @@
     
         <h:panelGroup layout="block" rendered="#{not indexController.loggedIn()}">
     
-            <div id="contentFull">
+            <div id="contentFull" class="box">
                 <ui:insert name="contentFull">
                     [Template content will be inserted here]
                 </ui:insert>
@@ -18,7 +18,7 @@
         </h:panelGroup>
         
         <h:panelGroup layout="block" rendered="#{indexController.loggedIn()}">
-            Congratulations! You found an easter egg!
+            <div id="contentFull" class="box">Congratulations! You found an easter egg!</div>
         </h:panelGroup>
         
     </ui:define>
