new 'messages' page with the list of the others who already talked with the user (any direction)

--- a/src/main/webapp/templates/logged-in-default.xhtml
+++ b/src/main/webapp/templates/logged-in-default.xhtml
@@ -23,6 +23,9 @@
 	                    <h:link value="Felhasználók" outcome="/content/user-list.xhtml" />
 	                </li>
 	                <li>
+	                    <h:link value="Üzenetek" outcome="/content/message-list.xhtml" />
+	                </li>
+	                <li>
 	                    <h:link value="Csoportok" outcome="/content/group-list.xhtml" />
 	                </li>
 	                <li>
