--- a/src/main/webapp/templates/logged-in-default.xhtml
+++ b/src/main/webapp/templates/logged-in-default.xhtml
@@ -29,6 +29,9 @@
 	                    <h:link value="Csoportok" outcome="/content/group-list.xhtml" />
 	                </li>
 	                <li>
+                        <h:link value="Üzenet statisztika" outcome="/content/msg-stat.xhtml" />
+                    </li>
+	                <li>
 		                <h:link value="Kijelentkezés" outcome="/index.xhtml">
 		                    <f:param name="a" value="logout" />
 		                </h:link>
